# 1ml

./: .gitignore  .ocamlformat  1ml.opam  README.md  dune-project
bak/: 1ml
lib/: Builtin.ml  Diagnostic.ml  Elaborate.ml  Eval.ml  FOmega.ml  Lexer.mll  Middle.ml  OneMl.ml  Parser.mly  Pipeline.ml  Pretty.ml  Prim.ml  Session.ml  Surface.ml  Typecheck.ml  Util.ml  dune  prelude.1ml
lib/Lang/: Common.ml  FOmega.ml  Surface.ml  Typed.ml  dune
lib/Syntax/: Lexer.mll  Parser.mly  Syntax.ml  dune
lib/Util/: Diagnostic.ml  Extra.ml  Util.ml  dune
test/: dune  errors.t  pretty.t  runner.ml  test.t
test/cram/: cli.t  dune  rossberg.1ml  rossberg.t
test/cram/rossberg.t/: paper.1ml  prelude.1ml  run.t  talk.1ml  test.1ml
test/files/00-basic/: 002-syntax.1ml  003-bindings.1ml  004-expressions.1ml  005-infer.1ml  006-subtyping.1ml  009-multiple-types.1ml  010-higher-kinded.1ml
test/files/01-examples/: 001-typeof.1ml  002-detached-type.1ml  003-type-manipulation.1ml
test/files/02-rossberg/: prelude.1ml  talk.1ml  test.1ml
test/fomega/: FOmega.fo  FOmega.ml  FOmega.t  FOmega.txt  Lexer.mll  Parser.mly  dune  run.t
test/pretty/: dune  pp.ml  prelude.1ml  types.t
test/rossberg.t/: paper.1ml  prelude.1ml  run.t  test.1ml
test/test.t/: prelude.1ml  run.t
test/test.t/00-basic/: 007-implicit.1ml
test/test.t/02-rossberg/: paper.1ml  prelude.1ml  russo.1ml  talk.1ml  test.1ml
test/test.t/ok/: 004-expressions.1ml  008-with.1ml  009-multiple-types.1ml  010.1ml
