(library
 (name OneMl)
 (libraries Util Lang Syntax)
 (preprocess
  (pps ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx)))

(rule
 (target prelude.ml)
 (deps prelude.1ml)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let prelude = {prelude|")
    (cat %{deps})
    (echo "|prelude};;")))))
